--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "object-keys-x",
   "version": "1.0.0",
-  "description": "An Object.keys shim.",
+  "description": "An ES6 Object.keys shim.",
   "homepage": "https://github.com/Xotic750/object-keys-x",
   "author": {
     "name": "Graham Fairweather",
@@ -9,6 +9,7 @@
   },
   "copyright": "Copyright (c) 2017",
   "keywords": [
+    "ES6",
     "object",
     "keys",
     "module",
@@ -31,7 +32,8 @@
   "dependencies": {
     "array-slice-x": "^1.0.1",
     "is-arguments": "^1.0.2",
-    "object-keys": "^1.0.11"
+    "object-keys": "^1.0.11",
+    "to-object-x": "^1.3.0"
   },
   "devDependencies": {
     "@xotic750/eslint-config-standard-x": "^1.4.0",
