--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "object-keys-x",
-  "version": "1.3.0",
+  "version": "2.0.0",
   "description": "An ES6 Object.keys shim.",
   "homepage": "https://github.com/Xotic750/object-keys-x",
   "author": {
@@ -30,8 +30,14 @@
     "url": "https://github.com/Xotic750/object-keys-x/issues"
   },
   "dependencies": {
+    "array-like-slice-x": "^1.1.0",
+    "attempt-x": "^1.1.0",
+    "has-own-property-x": "^3.1.1",
     "is-arguments": "^1.0.2",
+    "is-regexp-x": "^1.0.0",
+    "is-string": "^1.0.4",
     "object-keys": "^1.0.11",
+    "split-if-boxed-bug-x": "^1.0.0",
     "to-object-x": "^1.4.0"
   },
   "devDependencies": {
