--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "object-keys-x",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "An ES6 Object.keys shim.",
   "homepage": "https://github.com/Xotic750/object-keys-x",
   "author": {
@@ -34,11 +34,12 @@
     "attempt-x": "^1.1.0",
     "has-own-property-x": "^3.1.1",
     "is-arguments": "^1.0.2",
+    "is-array-x": "^1.1.1",
     "is-regexp-x": "^2.0.0",
     "is-string": "^1.0.4",
     "object-keys": "^1.0.11",
     "split-if-boxed-bug-x": "^1.0.0",
-    "to-object-x": "^1.4.0"
+    "to-object-x": "^1.4.1"
   },
   "devDependencies": {
     "@xotic750/eslint-config-standard-x": "^2.2.1",
