--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "object-keys-x",
-  "version": "3.0.12",
+  "version": "3.0.13",
   "description": "An ES6 Object.keys shim.",
   "homepage": "https://github.com/Xotic750/object-keys-x",
   "author": {
@@ -23,6 +23,7 @@
   ],
   "module": "dist/object-keys-x.esm.js",
   "main": "dist/object-keys-x.js",
+  "jsdelivr": "dist/object-keys-x.min.js",
   "scripts": {
     "build:esm": "mkdirp dist && babel -s true --env-name esm src/object-keys-x.js -o dist/object-keys-x.esm.js",
     "build:base": "webpack --bail --progress --profile --colors",
@@ -50,16 +51,16 @@
     "url": "https://github.com/Xotic750/object-keys-x/issues"
   },
   "dependencies": {
-    "array-like-slice-x": "^2.0.19",
-    "attempt-x": "^2.0.16",
-    "has-own-property-x": "^4.0.11",
+    "array-like-slice-x": "^2.0.21",
+    "attempt-x": "^2.0.18",
+    "has-own-property-x": "^4.0.12",
     "is-arguments": "^1.0.4",
-    "is-array-x": "^2.0.16",
-    "is-regexp-x": "^3.0.12",
+    "is-array-x": "^2.0.18",
+    "is-regexp-x": "^3.0.13",
     "is-string": "^1.0.4",
     "object-keys": "^1.1.1",
-    "split-if-boxed-bug-x": "^2.0.16",
-    "to-object-x": "^2.0.14"
+    "split-if-boxed-bug-x": "^2.0.18",
+    "to-object-x": "^2.0.16"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -97,7 +98,7 @@
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.13.6",
-    "eslint-plugin-jsdoc": "^15.7.1",
+    "eslint-plugin-jsdoc": "^15.7.2",
     "eslint-plugin-json": "^1.4.0",
     "eslint-plugin-lodash": "^5.1.0",
     "eslint-plugin-no-use-extend-native": "^0.4.1",
