--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "object-keys-x",
-  "version": "3.0.15",
+  "version": "3.0.16",
   "description": "An ES6 Object.keys shim.",
   "homepage": "https://github.com/Xotic750/object-keys-x",
   "author": {
@@ -31,7 +31,7 @@
     "build:dev": "npm run build:base --",
     "clean": "rimraf dist && npm run clean:coverage",
     "clean:coverage": "rimraf __tests__/coverage",
-    "lint": "eslint -f 'node_modules/eslint-friendly-formatter' --ext .js .",
+    "lint": "eslint -f 'node_modules/eslint-friendly-formatter' --ext .js,.json .",
     "lint-fix": "npm run lint -- --fix",
     "report": "npm run build -- --env.report",
     "report:dev": "npm run build:dev -- --env.report",
@@ -51,16 +51,16 @@
     "url": "https://github.com/Xotic750/object-keys-x/issues"
   },
   "dependencies": {
-    "array-like-slice-x": "^2.0.23",
-    "attempt-x": "^2.0.20",
-    "has-own-property-x": "^4.0.14",
+    "array-like-slice-x": "^2.0.24",
+    "attempt-x": "^2.0.21",
+    "has-own-property-x": "^4.0.15",
     "is-arguments": "^1.0.4",
-    "is-array-x": "^2.0.20",
-    "is-regexp-x": "^3.0.15",
+    "is-array-x": "^2.0.21",
+    "is-regexp-x": "^3.0.16",
     "is-string": "^1.0.4",
     "object-keys": "^1.1.1",
-    "split-if-boxed-bug-x": "^2.0.20",
-    "to-object-x": "^2.0.18"
+    "split-if-boxed-bug-x": "^2.0.21",
+    "to-object-x": "^2.0.19"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -74,7 +74,7 @@
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/runtime": "^7.5.5",
-    "@prorenata/eslint-config-vue": "^1.13.12",
+    "@prorenata/eslint-config-vue": "^1.13.14",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.8",
     "babel-core": "^7.0.0-0",
@@ -97,7 +97,7 @@
     "eslint-plugin-eslint-comments": "^3.1.2",
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.13.7",
+    "eslint-plugin-jest": "^22.14.0",
     "eslint-plugin-jsdoc": "^15.7.2",
     "eslint-plugin-json": "^1.4.0",
     "eslint-plugin-lodash": "^5.1.0",
